syntax = "proto3";
import "proto/plugin.proto";
import "proto/parameter.proto";

package pmx.mod_host;

message CreatePluginInstanceRequest {
  pmx.mod_host.plugins.PmxPluginType plugin_type = 1;
  string plugin_uri = 2;
}

message CreatePluginInstanceResponse {
  pmx.mod_host.plugins.PmxPlugin plugin = 1;
}

message GetParameterValueRequest {
  uint32 instance_number = 1;
  string symbol = 2;
}

service ModHostProxy {
  rpc CreatePluginInstance(CreatePluginInstanceRequest) returns (CreatePluginInstanceResponse);
  rpc GetParameterValue(GetParameterValueRequest) returns (pmx.mod_host.parameters.PmxParameter);
  rpc UpdateParameterValue(pmx.mod_host.parameters.PmxParameter) returns (pmx.mod_host.parameters.PmxParameter);
}
